--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 		
-		<div class="site-body container">
+		<div class="site-body-column site-body-intro container">
 			<div class="row">
 				<div class="book-cover col-lg-7 col-md-7 col-sm-7 col-xs-12">
 					<img src="img/temp_book-cover.png" />
@@ -103,6 +103,32 @@
 			</div>
 		</div>
 		
+		<div class="site-body-column site-body-author-bio container">
+			<div class="row">
+				<div class="author-bio">
+					<h1>About the Author</h1>
+					<img src="img/author-photo.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" style="float:right"/>
+					<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
+					<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
+					<p>In 1984, he edited and provided photographs for “Tillsonburg: A History, 1825-1982”, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote “Tillsonburg Diary: A Chronological History 1824-1994”, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published “Tillsonburg Album:  A Photographic History”</p>
+					<p>Aside from being Library CEO, he has served as Executive Secretary of the Tillsonburg Chamber of Commerce (1977- 2010), and as a freelance correspondent for the London Free Press (1976 – 1990).</p>
+					<p>Volunteer activity includes reading literacy training and involvement with Theatre Tillsonburg, on and off stage, as well as administratively as treasurer of the Theatre Board. He is married and continues to make his home in Tillsonburg, where he is trying to catch up on his reading, now that his book has been completed.</p>
+				</div>
+				<!--
+				<div class="author-bio col-lg-8 col-md-8 col-sm-8 col-xs-8">
+					<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
+					<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
+					<p>In 1984, he edited and provided photographs for “Tillsonburg: A History, 1825-1982”, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote “Tillsonburg Diary: A Chronological History 1824-1994”, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published “Tillsonburg Album:  A Photographic History”</p>
+					<p>Aside from being Library CEO, he has served as Executive Secretary of the Tillsonburg Chamber of Commerce (1977- 2010), and as a freelance correspondent for the London Free Press (1976 – 1990).</p>
+					<p>Volunteer activity includes reading literacy training and involvement with Theatre Tillsonburg, on and off stage, as well as administratively as treasurer of the Theatre Board. He is married and continues to make his home in Tillsonburg, where he is trying to catch up on his reading, now that his book has been completed.</p>
+				</div>
+				<div class="author-pic col-lg-4 cold-md-4 col-sm-4 col-xs-4">
+					<img src="img/author-photo.jpg" alt="Author, Matthew Scholtz" class="author-pic-img"/>
+				</div>
+				-->
+
+			</div>
+		</div>
 		
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
