Removed references to temp images

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 		<meta property="og:url"    content="http://www.tillsonburgalbum.com" /> 
 		<meta property="og:title"  content="Tillsonburg Album: A Photographic History" /> 
 		<meta property="og:description"  content="Covering photos from as far back as the 1800&#39;s, Tillsonburg Album gives readers a look at the evolution of the town and the people who are a part of it. The book is compiled by Matthew Scholtz, retired CEO of the Tillsonburg Public Library." /> 
-		<meta property="og:image"  content="http://www.tillsonburgalbum.com/img/temp_book-cover.png" />
+		<meta property="og:image"  content="http://www.tillsonburgalbum.com/img/book-cover.png" />
 
 		<!-- Twitter -->
 		<!-- <meta name="twitter:card" content="summary_large_image"> -->
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:title" content="Tillsonburg Album: A Photographic History">
 		<meta name="twitter:description" content="Covering photos from as far back as the 1800&#39;s, Tillsonburg Album gives readers a look at the evolution of the town and the people who are a part of it. The book is compiled by Matthew Scholtz, retired CEO of the Tillsonburg Public Library.">
-		<meta name="twitter:image:src" content="http://www.tillsonburgalbum.com/img/temp_book-cover.png">
+		<meta name="twitter:image:src" content="http://www.tillsonburgalbum.com/img/book-cover.png">
 
 		<!-- Google+ -->
 		<meta itemprop="name" content="Tillsonburg Album: A Photographic History">
 		<meta itemprop="description" content="Covering photos from as far back as the 1800&#39;s, Tillsonburg Album gives readers a look at the evolution of the town and the people who are a part of it. The book is compiled by Matthew Scholtz, retired CEO of the Tillsonburg Public Library.">
-		<meta itemprop="image" content="http://www.tillsonburgalbum.com/img/temp_book-cover.png">
+		<meta itemprop="image" content="http://www.tillsonburgalbum.com/img/book-cover.png">
 		<!-- DEPRECATED, for now: <link rel=”author” href=”https://plus.google.com/[YOUR PERSONAL G+ PROFILE HERE]“/> -->
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -50,7 +50,7 @@
 		<div class="site-body-column site-body-intro container">
 			<div class="row">
 				<div class="book-cover col-lg-7 col-md-7 col-sm-7 col-xs-12">
-					<img src="img/temp_book-cover.png" />
+					<img src="img/book-cover.png" />
 				</div>
 				<div class="book-title col-lg-5 col-md-5 col-sm-5 col-xs-12">
 					<h1>Tillsonburg Album</h1>
@@ -107,7 +107,7 @@
 			<div class="row">
 				<div class="author-bio">
 					<h1>About the Author</h1>
-					<img src="img/author-photo.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" style="float:right"/>
+					<img src="img/author-photo-opt.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" style="float:right"/>
 					<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
 					<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
 					<p>In 1984, he edited and provided photographs for “Tillsonburg: A History, 1825-1982”, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote “Tillsonburg Diary: A Chronological History 1824-1994”, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published “Tillsonburg Album:  A Photographic History”</p>
