Added quote rotater, revised CSS, added section elements, optimized author image

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 		
+		<!-- TODO: change to section instead of div -->
 		<div class="site-body-column site-body-intro container">
 			<div class="row">
 				<div class="book-cover col-lg-7 col-md-7 col-sm-7 col-xs-12">
@@ -54,8 +55,8 @@
 				</div>
 				<div class="book-title col-lg-5 col-md-5 col-sm-5 col-xs-12">
 					<h1>Tillsonburg Album</h1>
-					<h2>A Photographic History</h2>
-					<h3 class="h4">Compiled and written by Matthew Scholtz, retired CEO of the Tillsonburg Public Library</h3>
+					<div class="h2">A Photographic History</div>
+					<div class="h4">Compiled and written by Matthew Scholtz, retired CEO of the Tillsonburg Public Library</div>
 					<!-- <p>Chapters include:</p>
 					<ul>
 						<li>Aerials of Tillsonburg</li>
@@ -102,33 +103,113 @@
 				</div>
 			</div>
 		</div>
-		
-		<div class="site-body-column site-body-author-bio container">
-			<div class="row">
-				<div class="author-bio">
-					<h1>About the Author</h1>
-					<img src="img/author-photo-opt.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" style="float:right"/>
-					<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
-					<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
-					<p>In 1984, he edited and provided photographs for “Tillsonburg: A History, 1825-1982”, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote “Tillsonburg Diary: A Chronological History 1824-1994”, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published “Tillsonburg Album:  A Photographic History”</p>
-					<p>Aside from being Library CEO, he has served as Executive Secretary of the Tillsonburg Chamber of Commerce (1977- 2010), and as a freelance correspondent for the London Free Press (1976 – 1990).</p>
-					<p>Volunteer activity includes reading literacy training and involvement with Theatre Tillsonburg, on and off stage, as well as administratively as treasurer of the Theatre Board. He is married and continues to make his home in Tillsonburg, where he is trying to catch up on his reading, now that his book has been completed.</p>
-				</div>
-				<!--
-				<div class="author-bio col-lg-8 col-md-8 col-sm-8 col-xs-8">
-					<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
-					<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
-					<p>In 1984, he edited and provided photographs for “Tillsonburg: A History, 1825-1982”, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote “Tillsonburg Diary: A Chronological History 1824-1994”, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published “Tillsonburg Album:  A Photographic History”</p>
-					<p>Aside from being Library CEO, he has served as Executive Secretary of the Tillsonburg Chamber of Commerce (1977- 2010), and as a freelance correspondent for the London Free Press (1976 – 1990).</p>
-					<p>Volunteer activity includes reading literacy training and involvement with Theatre Tillsonburg, on and off stage, as well as administratively as treasurer of the Theatre Board. He is married and continues to make his home in Tillsonburg, where he is trying to catch up on his reading, now that his book has been completed.</p>
-				</div>
-				<div class="author-pic col-lg-4 cold-md-4 col-sm-4 col-xs-4">
-					<img src="img/author-photo.jpg" alt="Author, Matthew Scholtz" class="author-pic-img"/>
-				</div>
-				-->
 
+		<section class="quotes-wrap">
+			<div class="site-body-column site-body-quotes container">
+				<div class="row">
+				<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
+					<h1>What people are saying about Tillsonburg Album...</h1>
+					<div class="cbp-qtrotator">
+						<!-- TODO: convert to list? -->
+						<!-- TODO: randomize starting quote -->
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Hi Matt, I just purchased a copy of your book. It is fantastic, brings back alot of fond memories of growing up in Tillsonburg. Thanks so much for including my Mom, photo of telephone operators, I really appreciate it.</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>I picked up my copy a couple of weeks ago and love it.  Now my daughter would like one also. I wondered if I could order one for her.</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Hi Matt would it be possible for me to get another copy of your book tomorrow morning? I have a friend I would love to get one for. I can come pick it up if you like!</p>
+							  <p>p.s. i love your book!</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Any time that you are down town, I would appreciate it if you could drop the book off for me. I had a chance to scan one briefly and I was impressed. Today, a little girl in Grade 4 told me she had seen my picture 3 times.</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>What a wonderful archive of the rich and interesting history of Tillsonburg! </p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>I heard about the photo book you made of Tillsonburg and would love to purchase a copy. Could you let me know how to place an order?</p>
+					          <footer>Former resident, now in St John’s Newfoundland</footer>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Thoroughly enjoying my copy. Glad to have helped out. Great book, Matt!</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Book arrived and is awesome.  I have browsed through it but will need to spend more time looking at it more thoroughly.  You did an amazing job!</p>
+					          <p>Thanks so much.  Mom is going to love it!</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>The book is lovely!  I feel quite pleased and I am sure my sister will as well … You have two more sales!</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Just received the book, and pored over it. Congratulations on an interesting, historically important, and very time-consuming project. It's clearly a work of passion and of expertise. Well done.</p>
+							  <footer>Paul Knowles</footer>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Matt, it's fabulous! Thanks so much - I just sat down with it tonight to have a look … Mom will adore it, and by the index, she knows at least 1/3 of the people mentioned. Well done!</p>
+					        </blockquote>
+					    </div>
+					    <div class="cbp-qtcontent">
+					        <blockquote>
+					          <p>Congratulations on your book. It was much discussed on Facebook a week or two ago, all positive.</p>
+					        </blockquote>
+					    </div>
+					</div>
+				<!-- </div> -->
+				</div>
 			</div>
-		</div>
+		</section>
+		
+		<section class="author-wrap">
+			<div class="site-body-column site-body-author-bio container">
+				<div class="row">
+					<div class="author-bio">
+						<h1>About the Author</h1>
+						<img src="img/author-photo-opt.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" style="float:right"/>
+						<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
+						<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
+						<p>In 1984, he edited and provided photographs for <em>Tillsonburg: A History, 1825-1982</em>, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote <em>Tillsonburg Diary: A Chronological History 1824-1994</em>, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published <em>Tillsonburg Album:  A Photographic History</em></p>
+						<p>Aside from being Library CEO, he has served as Executive Secretary of the Tillsonburg Chamber of Commerce (1977- 2010), and as a freelance correspondent for the London Free Press (1976 – 1990).</p>
+						<p>Volunteer activity includes reading literacy training and involvement with Theatre Tillsonburg, on and off stage, as well as administratively as treasurer of the Theatre Board. He is married and continues to make his home in Tillsonburg, where he is trying to catch up on his reading, now that his book has been completed.</p>
+					</div>
+					<!--
+					<div class="author-bio col-lg-8 col-md-8 col-sm-8 col-xs-8">
+						<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
+						<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
+						<p>In 1984, he edited and provided photographs for “Tillsonburg: A History, 1825-1982”, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote “Tillsonburg Diary: A Chronological History 1824-1994”, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published “Tillsonburg Album:  A Photographic History”</p>
+						<p>Aside from being Library CEO, he has served as Executive Secretary of the Tillsonburg Chamber of Commerce (1977- 2010), and as a freelance correspondent for the London Free Press (1976 – 1990).</p>
+						<p>Volunteer activity includes reading literacy training and involvement with Theatre Tillsonburg, on and off stage, as well as administratively as treasurer of the Theatre Board. He is married and continues to make his home in Tillsonburg, where he is trying to catch up on his reading, now that his book has been completed.</p>
+					</div>
+					<div class="author-pic col-lg-4 cold-md-4 col-sm-4 col-xs-4">
+						<img src="img/author-photo.jpg" alt="Author, Matthew Scholtz" class="author-pic-img"/>
+					</div>
+					-->
+
+				</div>
+			</div>
+		</section>
 		
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -136,7 +217,10 @@
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-		
+		<script src="js/vendor/jquery.cbpQTRotator-v1.0.js"></script>
+		<script src="js/main.js"></script>
+
+
         <!-- <script src="js/main.js"></script> -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
