--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<img src="img/book-cover.png" />
 				</div>
 				<div class="book-title col-lg-5 col-md-5 col-sm-5 col-xs-12">
-					<h1>Tillsonburg Album</h1>
-					<div class="h2">A Photographic History</div>
-					<div class="h4">Compiled and written by Matthew Scholtz, retired CEO of the Tillsonburg Public Library</div>
+					<h1 class="book-title-h1">Tillsonburg Album</h1>
+					<div class="book-title-h2 h2">A Photographic History</div>
+					<div class="book-title-tagline h4">Compiled and written by Matthew Scholtz, retired CEO of the Tillsonburg Public Library</div>
 					<!-- <p>Chapters include:</p>
 					<ul>
 						<li>Aerials of Tillsonburg</li>
@@ -81,7 +81,7 @@
 				</div>
 				<div class="book-chapter-list col-lg-5 col-md-5 col-sm-12 col-xs-12">
 					<p>Chapters include:</p>
-					<ul>
+					<ul class="book-chapter-list-ul">
 						<li>Aerials of Tillsonburg</li>
 						<li>Post Cards of Tillsonburg</li>
 						<li>Saturday Globe Article, 1894</li>
@@ -108,8 +108,8 @@
 			<div class="site-body-column site-body-quotes container">
 				<div class="row">
 				<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
-					<h1>What people are saying about Tillsonburg Album...</h1>
-					<div class="cbp-qtrotator">
+					<h1 class="site-body-quotes-h1">What people are saying about Tillsonburg Album...</h1>
+					<div class="site-body-quote-rotator cbp-qtrotator">
 						<!-- TODO: convert to list? -->
 						<!-- TODO: randomize starting quote -->
 					    <div class="cbp-qtcontent">
@@ -186,8 +186,8 @@
 			<div class="site-body-column site-body-author-bio container">
 				<div class="row">
 					<div class="author-bio">
-						<h1>About the Author</h1>
-						<img src="img/author-photo-opt.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" style="float:right"/>
+						<h1 class="site-body-author-h1">About the Author</h1>
+						<img src="img/author-photo-opt.jpg" alt="Author, Matthew Scholtz" class="author-pic-img" />
 						<p>Matthew Scholtz was born in Czechoslovakia in 1946, raised for a time in Germany and immigrated with his family to Kitchener, Ontario in April 1951. After graduating from St. Jerome’s High School in Kitchener, he attended the University of Western Ontario, where he attained an Honours B.A. in History and English, followed by a Masters in Library Science.</p>
 						<p>In August, 1970, he was appointed Chief Librarian of the Tillsonburg Public Library, a position he held until his retirement in September 2010. He founded and became the first chairperson of the Association of Small Public Libraries of Ontario (1980) and served on many area and provincial library committees.</p>
 						<p>In 1984, he edited and provided photographs for <em>Tillsonburg: A History, 1825-1982</em>, which was co-authored by J.I. Cooper and John Armstrong. A decade later, he wrote <em>Tillsonburg Diary: A Chronological History 1824-1994</em>, based on a monograph by Anna M. Bailey.  Twenty years later, in September 2014, he published <em>Tillsonburg Album:  A Photographic History</em></p>
